--- a/src/Creuna.Episerver.RedirectHandler.TestApp/modules/_protected/Creuna.Episerver.RedirectHandler/Creuna.Episerver.RedirectHandler.nuspec
+++ b/src/Creuna.Episerver.RedirectHandler.TestApp/modules/_protected/Creuna.Episerver.RedirectHandler/Creuna.Episerver.RedirectHandler.nuspec
@@ -3,20 +3,21 @@
   <metadata>
     <id>Creuna.EPiServer.RedirectHandler</id>
     <title>Redirect Handler for EPiServer</title>
-    <version>4.0.0.0</version>
-    <authors>Creuna, Joachim Løvf</authors>
+    <version>4.0.0-beta</version>
+    <authors>Creuna</authors>
     <owners>Creuna</owners>
     <iconUrl>http://www.creuna.no/favicon.ico</iconUrl>
     <licenseUrl>https://www.coderesort.com/p/epicode/wiki/EpicodeLicense</licenseUrl>
+    <projectUrl>https://github.com/Creuna-Oslo/Creuna.Episerver.RedirectHandler</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>This library contains a custom 404 handler for your EPiServer project. It will replace the default 404 handler with one that you can change, in order for it to have a more consistent look with the rest of your site. It will also handle more 404 cases than the built-in handler. It also includes a Custom Redirect Gadget (for EPiServer Online Center) for editors to add redirects. The 404 handler logs all 404 errors and present them in a list in the gadget, which will allow editors to easily add redirects based on the logged errors.</description>
     <summary>A fork of the popular 404 handler for EPiServer.</summary>
     <language>en-US</language>
     <dependencies>
       <dependency id="DotNetZip" version="1.9.1.8" />
-      <dependency id="EPiServer.Framework" version="[9.1.0, 11.0)" />
-      <dependency id="EPiServer.CMS.Core" version="[9.1.0, 11.0)" />
-      <dependency id="EPiServer.CMS.UI.Core" version="[9.2.0, 11.0)" />
+      <dependency id="EPiServer.Framework" version="10.1.0" />
+      <dependency id="EPiServer.CMS.Core" version="10.1.0" />
+      <dependency id="EPiServer.CMS.UI.Core" version="10.0.2" />
       <dependency id="Microsoft.AspNet.Mvc" version="5.0.0" />
     </dependencies>
     <tags>EPiServer redirects</tags>
