--- a/src/Creuna.Episerver.RedirectHandler.TestApp/modules/_protected/Creuna.Episerver.RedirectHandler/web.config
+++ b/src/Creuna.Episerver.RedirectHandler.TestApp/modules/_protected/Creuna.Episerver.RedirectHandler/web.config
@@ -6,11 +6,11 @@
 type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
 requirePermission="false"/>
     <section name="episerver" type="EPiServer.Configuration.EPiServerSection, EPiServer.Configuration"/>
-    <section name="episerver.framework" type="EPiServer.Framework.Configuration.EPiServerFrameworkSection, EPiServer.Framework" restartOnExternalChanges="true"/>
+    <section name="episerver.framework" type="EPiServer.Framework.Configuration.EPiServerFrameworkSection, EPiServer.Framework.AspNet" restartOnExternalChanges="true"/>
     <section name="episerver.baseLibrary" allowDefinition="MachineToApplication" allowLocation="false"
 type="EPiServer.BaseLibrary.ConfigurationHandler,EPiServer.BaseLibrary"/>
     <section name="episerver.shell" type="EPiServer.Shell.Configuration.EPiServerShellSection, EPiServer.Shell"/>
-    <section name="episerver.search" type="EPiServer.Search.Configuration.SearchSection, EPiServer.ApplicationModules"/>
+    <section name="episerver.search" type="EPiServer.Search.Configuration.SearchSection, EPiServer.Search.Cms"/>
     <section name="episerver.packaging" type="EPiServer.Packaging.Configuration.EPiServerPackagingSection, EPiServer.Packaging"/>
   </configSections>
   <entityFramework>
@@ -26,80 +26,103 @@ type="EPiServer.BaseLibrary.ConfigurationHandler,EPiServer.BaseLibrary"/>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="EPiServer.Configuration" publicKeyToken="8fe83dea738b45b7" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-10.1.0.0" newVersion="10.1.0.0"/>
+        <assemblyIdentity name="EPiServer.Configuration" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-11.3.0.0" newVersion="11.3.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="EPiServer" publicKeyToken="8fe83dea738b45b7" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-10.1.0.0" newVersion="10.1.0.0"/>
+        <assemblyIdentity name="EPiServer" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-11.3.0.0" newVersion="11.3.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="EPiServer.Enterprise" publicKeyToken="8fe83dea738b45b7" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-10.1.0.0" newVersion="10.1.0.0"/>
+        <assemblyIdentity name="EPiServer.Enterprise" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-11.3.0.0" newVersion="11.3.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="EPiServer.ImageLibrary" publicKeyToken="8fe83dea738b45b7" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-10.1.0.0" newVersion="10.1.0.0"/>
+        <assemblyIdentity name="EPiServer.ImageLibrary" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-11.3.0.0" newVersion="11.3.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="EPiServer.LinkAnalyzer" publicKeyToken="8fe83dea738b45b7" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-10.1.0.0" newVersion="10.1.0.0"/>
+        <assemblyIdentity name="EPiServer.LinkAnalyzer" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-11.3.0.0" newVersion="11.3.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="EPiServer.Web.WebControls" publicKeyToken="8fe83dea738b45b7" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-10.1.0.0" newVersion="10.1.0.0"/>
+        <assemblyIdentity name="EPiServer.Web.WebControls" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-11.3.0.0" newVersion="11.3.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="EPiServer.XForms" publicKeyToken="8fe83dea738b45b7" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-10.1.0.0" newVersion="10.1.0.0"/>
+        <assemblyIdentity name="EPiServer.XForms" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-10.1.0.0" newVersion="10.1.0.0" />
       </dependentAssembly>
-      <probing privatePath="modulesbin"/>
+      <probing privatePath="modulesbin" />
       <dependentAssembly>
-        <assemblyIdentity name="EPiServer.Cms.Shell.UI" publicKeyToken="8fe83dea738b45b7" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-10.0.2.0" newVersion="10.0.2.0"/>
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="EPiServer.Shell.UI" publicKeyToken="8fe83dea738b45b7" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-10.0.2.0" newVersion="10.0.2.0"/>
+        <assemblyIdentity name="EPiServer.Cms.Shell.UI" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-11.1.1.0" newVersion="11.1.1.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="EPiServer.UI" publicKeyToken="8fe83dea738b45b7" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-10.0.2.0" newVersion="10.0.2.0"/>
+        <assemblyIdentity name="EPiServer.Shell.UI" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-11.1.1.0" newVersion="11.1.1.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="EPiServer.Packaging.CmdAPI" publicKeyToken="8fe83dea738b45b7" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-1.0.0.0" newVersion="1.0.0.0"/>
+        <assemblyIdentity name="EPiServer.UI" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-11.1.1.0" newVersion="11.1.1.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="EPiServer.Packaging" publicKeyToken="8fe83dea738b45b7" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-3.3.0.0" newVersion="3.3.0.0"/>
+        <assemblyIdentity name="EPiServer.Packaging.CmdAPI" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.0.0.0" newVersion="1.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="EPiServer.ApplicationModules" publicKeyToken="8fe83dea738b45b7" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-10.1.0.0" newVersion="10.1.0.0"/>
+        <assemblyIdentity name="EPiServer.Packaging" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.4.0.0" newVersion="3.4.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="EPiServer.Data.Cache" publicKeyToken="8fe83dea738b45b7" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-10.1.0.0" newVersion="10.1.0.0"/>
+        <assemblyIdentity name="EPiServer.ApplicationModules" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-11.3.0.0" newVersion="11.3.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="EPiServer.Data" publicKeyToken="8fe83dea738b45b7" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-10.1.0.0" newVersion="10.1.0.0"/>
+        <assemblyIdentity name="EPiServer.Data.Cache" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-11.3.0.0" newVersion="11.3.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="EPiServer.Events" publicKeyToken="8fe83dea738b45b7" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-10.1.0.0" newVersion="10.1.0.0"/>
+        <assemblyIdentity name="EPiServer.Data" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-11.3.0.0" newVersion="11.3.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="EPiServer.Framework" publicKeyToken="8fe83dea738b45b7" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-10.1.0.0" newVersion="10.1.0.0"/>
+        <assemblyIdentity name="EPiServer.Events" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-11.3.0.0" newVersion="11.3.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="EPiServer.Licensing" publicKeyToken="8fe83dea738b45b7" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-10.1.0.0" newVersion="10.1.0.0"/>
+        <assemblyIdentity name="EPiServer.Framework" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-11.3.0.0" newVersion="11.3.0.0" />
       </dependentAssembly>
-    <dependentAssembly><assemblyIdentity name="EPiServer.Shell" publicKeyToken="8fe83dea738b45b7" culture="neutral"/><bindingRedirect
-oldVersion="0.0.0.0-10.0.2.0" newVersion="10.0.2.0"/></dependentAssembly></assemblyBinding>
+      <dependentAssembly>
+        <assemblyIdentity name="EPiServer.Licensing" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-11.3.0.0" newVersion="11.3.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="EPiServer.Shell" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-11.1.1.0" newVersion="11.1.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="EPiServer.Framework.AspNet" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-11.3.0.0" newVersion="11.3.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="EPiServer.Cms.AspNet" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-11.3.0.0" newVersion="11.3.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="EPiServer.Cms.TinyMce" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.0.0.0" newVersion="1.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="EPiServer.ServiceLocation.StructureMap" publicKeyToken="null" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.0.0.0" newVersion="2.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="EPiServer.ServiceLocation.StructureMap" publicKeyToken="null" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.0.0.0" newVersion="2.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
   </runtime>
   <episerver>
     <applicationSettings httpCacheability="Public" pageValidateTemplate="false" uiShowGlobalizationUserInterface="true" uiUrl="~/EPiServer/CMS/"
@@ -123,7 +146,7 @@ urlRebaseKind="ToRootRelative"/>
     <virtualPathProviders>
       <clear/>
       <add name="ProtectedModules" virtualPath="~/EPiServer/" physicalPath="Modules\_Protected"
-type="EPiServer.Web.Hosting.VirtualPathNonUnifiedProvider, EPiServer.Framework"/>
+type="EPiServer.Web.Hosting.VirtualPathNonUnifiedProvider, EPiServer.Framework.AspNet"/>
     </virtualPathProviders>
     <geolocation defaultProvider="maxmind">
       <providers>
@@ -154,10 +177,10 @@ resourceProviderFactoryType="EPiServer.Framework.Localization.LocalizationServic
     <pages validateRequest="false" enableEventValidation="true"
 pageParserFilterType="System.Web.Mvc.ViewTypeParserFilter, System.Web.Mvc, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35">
       <controls>
-        <add tagPrefix="EPiServer" namespace="EPiServer.Web.WebControls" assembly="EPiServer"/>
+        <add tagPrefix="EPiServer" namespace="EPiServer.Web.WebControls" assembly="EPiServer.Cms.AspNet"/>
         <add tagPrefix="EPiServer" namespace="EPiServer.Web.WebControls" assembly="EPiServer.Web.WebControls"/>
         <add tagPrefix="XForms" namespace="EPiServer.XForms.WebControls" assembly="EPiServer.XForms"/>
-        <add tagPrefix="EPiServer" namespace="EPiServer.Framework.Web.WebControls" assembly="EPiServer.Framework"/>
+        <add tagPrefix="EPiServer" namespace="EPiServer.Framework.Web.WebControls" assembly="EPiServer.Framework.AspNet"/>
       </controls>
       <namespaces>
         <add namespace="System.Web.Mvc"/>
@@ -196,9 +219,9 @@ pageParserFilterType="System.Web.Mvc.ViewTypeParserFilter, System.Web.Mvc, Versi
         <add name="Title" type="System.String"/>
         <add name="CustomExplorerTreePanel" type="System.String"/>
         <add name="FileManagerFavourites" type="System.Collections.Generic.List`1[System.String]"/>
-        <add name="EditTreeSettings" type="EPiServer.Personalization.GuiSettings, EPiServer"/>
         <add name="ClientToolsActivationKey" type="System.String"/>
         <add name="FrameworkName" type="System.String"/>
+        <add name="EditTreeSettings" type="EPiServer.Personalization.GuiSettings, EPiServer.Cms.AspNet" />
       </properties>
       <providers>
         <add name="DefaultProfileProvider"
@@ -209,9 +232,9 @@ connectionStringName="EPiServerDB" applicationName="/"/>
     <membership defaultProvider="MultiplexingMembershipProvider" userIsOnlineTimeWindow="10" hashAlgorithmType="HMACSHA512">
       <providers>
         <clear/>
-        <add name="MultiplexingMembershipProvider" type="EPiServer.Security.MultiplexingMembershipProvider, EPiServer.Framework"
+        <add name="MultiplexingMembershipProvider" type="EPiServer.Security.MultiplexingMembershipProvider, EPiServer.Framework.AspNet" 
 provider1="SqlServerMembershipProvider" provider2="WindowsMembershipProvider"/>
-        <add name="WindowsMembershipProvider" type="EPiServer.Security.WindowsMembershipProvider, EPiServer" deletePrefix="BUILTIN\" searchByEmail="true"/>
+        <add name="WindowsMembershipProvider" type="EPiServer.Security.WindowsMembershipProvider, EPiServer.Cms.AspNet" deletePrefix="BUILTIN\" searchByEmail="true"/>
         <add name="SqlServerMembershipProvider"
 type="System.Web.Providers.DefaultMembershipProvider, System.Web.Providers, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
 connectionStringName="EPiServerDB" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false"
@@ -221,9 +244,9 @@ maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalpha
     <roleManager enabled="true" defaultProvider="MultiplexingRoleProvider" cacheRolesInCookie="true">
       <providers>
         <clear/>
-        <add name="MultiplexingRoleProvider" type="EPiServer.Security.MultiplexingRoleProvider, EPiServer.Framework" provider1="SqlServerRoleProvider"
+        <add name="MultiplexingRoleProvider" type="EPiServer.Security.MultiplexingRoleProvider, EPiServer.Framework.AspNet" provider1="SqlServerRoleProvider" 
 provider2="WindowsRoleProvider" providerMap1="SqlServerMembershipProvider" providerMap2="WindowsMembershipProvider"/>
-        <add name="WindowsRoleProvider" applicationName="/" type="EPiServer.Security.WindowsRoleProvider, EPiServer"/>
+        <add name="WindowsRoleProvider" applicationName="/" type="EPiServer.Security.WindowsRoleProvider, EPiServer.Cms.AspNet"/>
         <add name="SqlServerRoleProvider"
 type="System.Web.Providers.DefaultRoleProvider, System.Web.Providers, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
 connectionStringName="EPiServerDB" applicationName="/"/>
@@ -232,8 +255,8 @@ connectionStringName="EPiServerDB" applicationName="/"/>
   </system.web>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true">
-      <add name="InitializationModule" type="EPiServer.Framework.Initialization.InitializationModule, EPiServer.Framework" preCondition="managedHandler"/>
-      <add name="UrlRewriteModule" type="EPiServer.Web.RoutingUrlRewriteModule, EPiServer" preCondition="managedHandler"/>
+      <add name="InitializationModule" type="EPiServer.Framework.Initialization.InitializationModule, EPiServer.Framework.AspNet" preCondition="managedHandler"/>
+      <add name="UrlRewriteModule" type="EPiServer.Web.RoutingUrlRewriteModule, EPiServer.Cms.AspNet" preCondition="managedHandler"/>
       <add name="ShellRoutingModule" type="EPiServer.Shell.Web.Routing.ShellRoutingModule, EPiServer.Shell"/>
       <remove name="WebDAVModule"/>
     </modules>
@@ -270,7 +293,7 @@ type="System.Web.HttpForbiddenHandler, System.Web, Version=4.0.0.0, Culture=neut
       <pages enableEventValidation="true" enableViewState="true" enableSessionState="true" enableViewStateMac="true">
         <controls>
           <add tagPrefix="EPiServerUI" namespace="EPiServer.UI.WebControls" assembly="EPiServer.UI"/>
-          <add tagPrefix="EPiServerScript" namespace="EPiServer.ClientScript.WebControls" assembly="EPiServer"/>
+          <add tagPrefix="EPiServerScript" namespace="EPiServer.ClientScript.WebControls" assembly="EPiServer.Cms.AspNet"/>
           <add tagPrefix="EPiServerScript" namespace="EPiServer.UI.ClientScript.WebControls" assembly="EPiServer.UI"/>
         </controls>
       </pages>
@@ -295,7 +318,7 @@ preCondition="integratedMode,runtimeVersionv4.0"/>
         <add name="svc-Integrated-4.0" path="*.svc" verb="*"
 type="System.ServiceModel.Activation.ServiceHttpHandlerFactory, System.ServiceModel.Activation, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
 preCondition="integratedMode,runtimeVersionv4.0"/>
-        <add name="wildcard" path="*" verb="*" type="EPiServer.Web.StaticFileHandler, EPiServer.Framework"/>
+        <add name="wildcard" path="*" verb="*" type="EPiServer.Web.StaticFileHandler, EPiServer.Framework.AspNet" />
       </handlers>
     </system.webServer>
   </location>
@@ -312,7 +335,7 @@ preCondition="integratedMode,runtimeVersionv4.0"/>
       <pages enableEventValidation="true">
         <controls>
           <add tagPrefix="EPiServerUI" namespace="EPiServer.UI.WebControls" assembly="EPiServer.UI"/>
-          <add tagPrefix="EPiServerScript" namespace="EPiServer.ClientScript.WebControls" assembly="EPiServer"/>
+          <add tagPrefix="EPiServerScript" namespace="EPiServer.ClientScript.WebControls" assembly="EPiServer.Cms.AspNet"/>
         </controls>
       </pages>
       <globalization requestEncoding="utf-8" responseEncoding="utf-8"/>
@@ -329,7 +352,7 @@ preCondition="integratedMode,runtimeVersionv4.0"/>
         <add name="WebServiceHandlerFactory-Integrated-4.0" path="*.asmx" verb="GET,HEAD,POST,DEBUG"
 type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
 preCondition="integratedMode,runtimeVersionv4.0"/>
-        <add name="wildcard" path="*" verb="*" type="EPiServer.Web.StaticFileHandler, EPiServer.Framework"/>
+        <add name="wildcard" path="*" verb="*" type="EPiServer.Web.StaticFileHandler, EPiServer.Framework.AspNet"/>
       </handlers>
     </system.webServer>
   </location>
