--- a/src/Creuna.Episerver.RedirectHandler.TestApp/packages.config
+++ b/src/Creuna.Episerver.RedirectHandler.TestApp/packages.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Antlr" version="3.4.1.9004" targetFramework="net451" />
+  <package id="Antlr" version="3.4.1.9004" targetFramework="net461" />
   <package id="Castle.Core" version="4.2.1" targetFramework="net461" />
   <package id="Castle.Windsor" version="4.1.0" targetFramework="net461" />
-  <package id="EntityFramework" version="6.1.3" targetFramework="net451" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
   <package id="EPiServer.CMS" version="11.3.0" targetFramework="net461" />
   <package id="EPiServer.CMS.AspNet" version="11.3.0" targetFramework="net461" />
   <package id="EPiServer.CMS.Core" version="11.3.0" targetFramework="net461" />
@@ -14,28 +14,28 @@
   <package id="EPiServer.Framework.AspNet" version="11.3.0" targetFramework="net461" />
   <package id="EPiServer.Logging.Log4Net" version="2.2.0" targetFramework="net461" />
   <package id="EPiServer.Packaging" version="3.4.0" targetFramework="net461" />
-  <package id="EPiServer.Packaging.UI" version="3.3.0" targetFramework="net451" />
+  <package id="EPiServer.Packaging.UI" version="3.3.0" targetFramework="net461" />
   <package id="EPiServer.Search.Cms" version="9.0.1" targetFramework="net461" />
   <package id="EPiServer.ServiceLocation.StructureMap" version="2.0.0" targetFramework="net461" />
   <package id="EPiServer.XForms" version="1.0.3" targetFramework="net461" />
   <package id="log4net" version="2.0.8" targetFramework="net461" />
-  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net451" />
-  <package id="Microsoft.AspNet.Providers.Core" version="2.0.0" targetFramework="net451" />
-  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net451" />
-  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net451" />
-  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Providers.Core" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.Tpl.Dataflow" version="4.5.24" targetFramework="net461" />
-  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
-  <package id="NuGet.Core" version="2.5.0" targetFramework="net451" />
-  <package id="Serilog" version="2.2.1" targetFramework="net451" requireReinstallation="true" />
-  <package id="Serilog.Sinks.File" version="3.0.1" targetFramework="net451" />
-  <package id="Serilog.Sinks.Literate" version="2.0.0" targetFramework="net451" />
-  <package id="Serilog.Sinks.RollingFile" version="3.0.1" targetFramework="net451" />
+  <package id="NuGet.Core" version="2.5.0" targetFramework="net461" />
+  <package id="Serilog" version="2.2.1" targetFramework="net461" />
+  <package id="Serilog.Sinks.File" version="3.0.1" targetFramework="net461" />
+  <package id="Serilog.Sinks.Literate" version="2.0.0" targetFramework="net461" />
+  <package id="Serilog.Sinks.RollingFile" version="3.0.1" targetFramework="net461" />
   <package id="StructureMap" version="4.5.2" targetFramework="net461" />
   <package id="structuremap.web" version="4.0.0.315" targetFramework="net461" />
-  <package id="structuremap.web-signed" version="3.1.6.186" targetFramework="net451" />
-  <package id="structuremap-signed" version="3.1.6.186" targetFramework="net451" />
+  <package id="structuremap.web-signed" version="3.1.6.191" targetFramework="net461" />
+  <package id="structuremap-signed" version="3.1.6.191" targetFramework="net461" />
   <package id="System.ComponentModel.Annotations" version="4.4.0" targetFramework="net461" />
   <package id="System.Data.SqlClient" version="4.4.0" targetFramework="net461" />
   <package id="System.Reflection.Emit" version="4.3.0" targetFramework="net461" />
@@ -45,5 +45,5 @@
   <package id="System.Security.Permissions" version="4.4.0" targetFramework="net461" />
   <package id="System.Security.Principal.Windows" version="4.4.0" targetFramework="net461" />
   <package id="System.Threading.AccessControl" version="4.4.0" targetFramework="net461" />
-  <package id="WebGrease" version="1.5.2" targetFramework="net451" />
+  <package id="WebGrease" version="1.5.2" targetFramework="net461" />
 </packages>
